kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 20.23.10.150.nip.io # External Ingress Controller IP
    secretName: tls-secret
  rules:
  - host: 20.23.10.150.nip.io # External Ingress Controller IP
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
